--- a/quick/index.html
+++ b/quick/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+
     <title>Quick</title>
 </head>
 
@@ -13,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <span>Flexible. creative. responsive</span>
+                    <span class="hidden-xs">Flexible. creative. responsive</span>
                     <h1>creative agency</h1>
                     <p><a href="#" class="btn btn-lg btn-primary">More Detail</a>
                     </p>
@@ -91,24 +95,28 @@
     <section class="about">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2" class="text-center">
+                <div class="col-sm-8 col-sm-offset-2 text-center">
                     <h2>About us</h2>
-                    <p>We are a creative agency located in Usa.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    <i class="fa fa-user"></i>
+                    <p class="lead">We are a creative agency located in Usa.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4">
+                    <i class="fa fa-lightbulb-o fa-2x"></i>
                     <h3>Creative</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.ullamcorper diam nec augue semper, in dignissim.</p>
                 </div>
 
                 <div class="col-sm-4">
+                    <i class="fa fa-code fa-2x"></i>
                     <h3>Clean &amp; Modern</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.ullamcorper diam nec augue semper, in dignissim.</p>
                 </div>
 
                 <div class="col-sm-4">
+                    <i class="fa fa-tablet fa-2x"></i>
                     <h3>100% Responsive</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.ullamcorper diam nec augue semper, in dignissim.</p>
                 </div>
@@ -135,6 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
+                    <i class="fa fa-user"></i>
                     <h2>Meet the team</h2>
                 </div>
             </div>
@@ -175,7 +184,16 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <h2>Testimonials</h2>
-                    <p>Immediately received personal feedback from the creator of the theme. Incredibly fast, incredibly good. Great service!</p>
+                    <i class="fa fa-quote-left"></i>
+                    <div class="row">
+                        <div class="col-sm-1">
+                            <i class="fa fa-quote-left fa-2x"></i>
+                        </div>
+                        <div class="col-sm-11">
+
+                            <p>Immediately received personal feedback from the creator of the theme. Incredibly fast, incredibly good. Great service!</p>
+                        </div>
+                    </div>
                     <p>-Michael CC</p>
                 </div>
             </div>
@@ -199,29 +217,60 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h2>Our Services</h2>
+                    <i class="fa fa-bars"></i>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-6">
-                    <h3>Web Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <i class="fa fa-image fa-2x"></i>
+                        </div>
+                        <div class="col-sm-10">
+                            <h3>Web Design</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-sm-6">
-                    <h3>Psd Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <i class="fa fa-crop fa-2x"></i>
+                        </div>
+
+                        <div class="col-sm-10">
+                            <h3>Psd Design</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+                        </div>
+                    </div>
                 </div>
 
 
                 <div class="col-sm-6">
-                    <h3>Quick response</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <i class="fa fa-users fa-2x"></i>
+                        </div>
+                        <div class="col-sm-10">
+                            <h3>Quick response</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-sm-6">
-                    <h3>Fully responsive Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <i class="fa fa-desktop fa-2x"></i>
+                        </div>
+                        <div class="col-sm-10">
+                            <h3>Fully responsive Design</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -233,7 +282,8 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <h2>Our Portfolio</h2>
-                    <p>We believe on our work.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    <i class="fa fa-image"></i>
+                    <p class="lead">We believe on our work.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                 </div>
             </div>
 
@@ -290,17 +340,17 @@
     <section class="facts">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <h2>3450</h2>
                     <h3>Projects Complete</h3>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <h2>345</h2>
                     <h3>Happy Clients</h3>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <h2>6000</h2>
                     <h3>Working Hours</h3>
                 </div>
@@ -314,11 +364,12 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h2>Latest news</h2>
+                    <i class="fa fa-calendar"></i>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <img src="img/work-8.png" alt="" class="img-responsive">
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
@@ -327,7 +378,7 @@
                     </p>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <img src="img/work-7.png" alt="" class="img-responsive">
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
@@ -336,7 +387,7 @@
                     </p>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <img src="img/work-6.png" alt="" class="img-responsive">
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
@@ -345,7 +396,7 @@
                     </p>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <img src="img/work-5.png" alt="" class="img-responsive">
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
@@ -354,7 +405,7 @@
                     </p>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <img src="img/work-4.png" alt="" class="img-responsive">
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
@@ -363,7 +414,7 @@
                     </p>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <img src="img/work-3.png" alt="" class="img-responsive">
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
@@ -372,14 +423,20 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section id="cta=3">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <a href="#" class="btn btn-lg btn-primary">Read all blog posts</a>
                 </div>
             </div>
         </div>
+
     </section>
+
     <!--blog section end-->
 
     <section class="contact">
@@ -388,7 +445,8 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h2>Keep in touch</h2>
-                    <p>We are ready to start your project? Give us a call or drop us a line.</p>
+                    <i class="fa fa-phone"></i>
+                    <p class="lead">We are ready to start your project? Give us a call or drop us a line.</p>
                 </div>
             </div>
 
@@ -420,25 +478,25 @@
 
                 <div class="col-sm-5">
                     <h3>Our Office</h3>
-                    <p>Address: 302012 Street Name, City Name</p>
-                    <p>Phone: (141) 456-7890</p>
-                    <p>Email: support@quick.com</p>
+                    <p><i class="fa fa-map-marker"></i>Address: 302012 Street Name, City Name</p>
+                    <p><i class="fa fa-phone"></i>Phone: (141) 456-7890</p>
+                    <p><i class="fa fa-envelope"></i>Email: support@quick.com</p>
                     <p><strong>Monday - Friday : </strong> 9:30 AM - 5:30 PM</p>
                     <p><strong>Saturday - Sunday: </strong> Closed</p>
 
                     <h3>Elsewhere</h3>
                     <ul class="list-inline">
-                        <li><a href="#">facebook</a>
+                        <li><a href="#"><i class="fa fa-facebook"></i><span class="sr-only">facebook</span></a>
                         </li>
-                        <li><a href="#">twitter</a>
+                        <li><a href="#"><i class="fa fa-twitter"></i><span class="sr-only">twitter</span></a>
                         </li>
-                        <li><a href="#">google plus</a>
+                        <li><a href="#"><i class="fa fa-google-plus"></i><span class="sr-only">google plus</span></a>
                         </li>
-                        <li><a href="#">linkedin</a>
+                        <li><a href="#"><i class="fa fa-linkedin"></i><span class="sr-only">linkedin</span></a>
                         </li>
-                        <li><a href="#">dribbble</a>
+                        <li><a href="#"><i class="fa fa-dribbble"></i><span class="sr-only">dribbble</span></a>
                         </li>
-                        <li><a href="#">pinterest</a>
+                        <li><a href="#"><i class="fa fa-pinterest"></i><span class="sr-only">pinterest</span></a>
                         </li>
                     </ul>
                 </div>
@@ -451,7 +509,7 @@
         <div class="container">
             <div class="row text-center">
 
-                <ul>
+                <ul class="text-inline">
                     <div class="col-sm-6">
                         <li><a href="#">Terms of use</a>
                         </li>
