--- a/quick/index.html
+++ b/quick/index.html
@@ -20,7 +20,7 @@
                 <div class="col-sm-12 text-center">
                     <span class="hidden-xs">Flexible. creative. responsive</span>
                     <h1>creative agency</h1>
-                    <p><a href="#" class="btn btn-lg btn-primary">More Detail</a>
+                    <p><a href="#" class="btn btn-lg">More Detail</a>
                     </p>
                 </div>
             </div>
