--- a/quick/index.html
+++ b/quick/index.html
@@ -108,7 +108,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-center">
                     <div class="about-col">
                         <i class="fa fa-lightbulb-o fa-2x"></i>
                         <h3>Creative</h3>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-center">
                     <div class="about-col">
                         <i class="fa fa-code fa-2x"></i>
                         <h3>Clean &amp; Modern</h3>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-center">
                     <div class="about-col">
                         <i class="fa fa-tablet fa-2x"></i>
                         <h3>100% Responsive</h3>
@@ -139,10 +139,10 @@
     <section id="cta-1">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-8 text-center">
                     <h3><strong>Good</strong> design is finding that perfect balance between the way something looks and how it functions.</h3>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-center">
                     <a href="#" class="btn btn-lg btn-primary btn-cta">Let's find it</a>
                 </div>
             </div>
@@ -227,7 +227,7 @@
     <section id="cta-2">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-12 text-center">
                     <a href="#" class="btn btn-lg btn-primary btn-cta-o">Hire us Now</a>
                 </div>
             </div>
@@ -323,101 +323,117 @@
             </div>
 
             <div class="row">
-                <div class="portfolio-col">
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-1.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+                </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-2.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+                </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-3.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+                </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-4.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+            </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-5.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+                </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-6.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+                </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-7.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+            </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-8.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
+                    </div>
 
                     <div class="col-sm-6 col-md-4">
+                       <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-9.png" alt="" class="img-responsive">
-                        </div>
                         <div class="item-img-overlay">
                             <span></span>
+                        </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
@@ -428,11 +444,11 @@
     </section>
     <!--portfolio section end-->
 
-    <section id="facts">
+    <section id="facts" class="section-padding">
         <div class="container">
 
             <div class="row">
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 text-center">
                     <div class="facts-col">
                         <div class="section-heading color-reverse">
                             <h2>3450</h2>
@@ -442,14 +458,14 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 text-center">
                     <div class="facts-col color-reverse">
-                        <h2>345</h2>
+                        <h2>345+</h2>
                         <h3>Happy Clients</h3>
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 text-center">
                     <div class="facts-col color-reverse">
                         <h2>6000</h2>
                         <h3>Working Hours</h3>
@@ -508,41 +524,48 @@
                     <div class="blog-col">
                         <div class="item-img-wrap">
                             <img src="img/work-6.png" alt="" class="img-responsive">
+                            <div class="item-img-overlay">
                             <span></span>
+                            </div>
                         </div>
-                    </div>
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                     <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
                     </p>
+                    </div>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
                     <div class="blog-col">
                         <div class="item-img-wrap">
                             <img src="img/work-5.png" alt="" class="img-responsive">
-                            <span></span>
+                            <div class="item-img-overlay">
+                        <span></span>
+                            </div>
                         </div>
-                    </div>
                     <h3><a href="#">Blog post title</a></h3>
                     <span>27 August 2014</span>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                     <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
                     </p>
+                    </div>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
                     <div class="blog-col">
                         <div class="item-img-wrap">
                             <img src="img/work-4.png" alt="" class="img-responsive">
+                            <div class="item-img-overlay">
+                            <span></span>
+                            </div>
+                        </div>
                             <h3><a href="#">Blog post title</a></h3>
                             <span>27 August 2014</span>
-                        </div>
-                    </div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                     <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
                     </p>
+                    </div>
                 </div>
 
 
@@ -550,12 +573,15 @@
                     <div class="blog-col">
                         <div class="item-img-wrap">
                             <img src="img/work-3.png" alt="" class="img-responsive">
+                            <div class="item-img-overlay">
+                            <span></span>
+                            </div>
+                        </div>
                             <h3><a href="#">Blog post title</a></h3>
                             <span>27 August 2014</span>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                             <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
                             </p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -565,8 +591,8 @@
     <section id="cta-3">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
-                    <div class="section-heading color-reverse">
+                <div class="col-sm-12 text-center">
+                    <div class="color-reverse">
                         <a href="#" class="btn btn-lg btn-primary btn-cta-o">Read all blog posts</a>
                     </div>
                 </div>
@@ -647,29 +673,18 @@
     </section>
     <!--contact section end-->
 
-    <section id="footer" class="section-padding">
+    <section id="footer" class="section-padding color-reverse">
         <div class="container">
-               <div class="color-reverse">
-                <div class="row text-center">
-                    <ul>
-                        <div class="col-sm-6">
-                            <li class="color-reverse"><a href="#">Terms of use</a>
-                            </li>
-                        </div>
-                        <div class="col-sm-6">
-                            <li class="color-reverse"><a href="#">Privacy and policy</a>
-                            </li>
-                        </div>
+                <div class="row">
+                   <div class="col-sm-12 text-center"> 
+                    <ul class="list-inline">
+                            <li><a href="#">Terms of use</a></li>   
+                            <li><a href="#">Privacy and policy</a></li>
                     </ul>
-
-                    <div class="row">
-                        <div class="col-sm-12 text-center">
                             <div>Copyright &copy; 2016. Quick.</div>
                            </div>
                         </div>
                     </div>
-            </div>
-        </div>
     </section>
     <!--footer section end-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
