--- a/quick/index.html
+++ b/quick/index.html
@@ -14,13 +14,27 @@
 </head>
 
 <body>
-    <section id="home">
+    <section id="home" data-stellar-background-ratio="0.5">
+        <div class="parallax-overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <div class="color-reverse">
                         <span class="hidden-xs home-text">Flexible. creative. responsive</span>
-                        <h1 class="home-h1">creative <span>agency</span></h1>
+                        <div class="main-flex-slider">
+                            <ul class="slides">
+                                <li>
+                                    <h1 class="home-h1">We are <span>quick</span></h1>
+                                </li>
+                                <li>
+                                    <h1 class="home-h1"><span>creative </span>agency</h1>
+                                </li>
+                                <li>
+                                    <h1 class="home-h1">Clean &amp; <span>flexible</span></h1>
+                                </li>
+                            </ul>
+                        </div>
+                        
                         <p><a href="#" class="btn btn-lg btn-dark">More Detail</a>
                         </p>
                     </div>
@@ -31,7 +45,7 @@
     <!--home section end-->
 
     <section class="navigation">
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -46,7 +60,7 @@
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right scrollto">
                         <li><a href="#">Home</a>
                         </li>
                         <li><a href="#">About</a>
@@ -200,23 +214,31 @@
     </section>
     <!--team section end-->
 
-    <section id="testimonials" class="section-padding">
+    <section id="testimonials" class="section-padding parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <div class="section-heading color-reverse">
                         <h2>Testimonials</h2>
-                        <i class="fa fa-quote-left"></i>
-                        <div class="row">
-                            <div class="col-sm-1">
-                                <i class="fa fa-quote-left fa-2x"></i>
-                            </div>
-                            <div class="col-sm-11">
 
-                                <p>Immediately received personal feedback from the creator of the theme. Incredibly fast, incredibly good. Great service!</p>
+                        <div class="row">
+                            <span class="icon"><i class="fa fa-quote-left"></i></span>
+                        </div>
+                        <div id="testi-carousel" class="owl-carousel">
+                            <div>
+                                <p class="lead color-reverse">
+                                    <i class="fa fa-quote-left fa-2x"></i> Immediately received personal feedback from the creator of the theme. Incredibly fast, incredibly good. Great service!</p>
                             </div>
                         </div>
                         <p class="author">-Michael CC</p>
+                    </div>
+                    <div>
+                        <p class="lead color-reverse"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia.</p>
+                        <p class="author">-Rakesh sharma</p>
+                    </div>
+                    <div>
+                        <p class="lead color-reverse"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia.</p>
+                        <p class="author">-Rakesh sharma</p>
                     </div>
                 </div>
             </div>
@@ -235,7 +257,7 @@
     </section>
     <!--cta-2 section end-->
 
-    <section id="services" class="section-padding">
+    <section id="services" class="section-padding parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
@@ -444,14 +466,14 @@
     </section>
     <!--portfolio section end-->
 
-    <section id="facts" class="section-padding">
+    <section id="facts" class="section-padding parallax" data-stellar-background-ratio="0.5">
         <div class="container">
 
             <div class="row">
                 <div class="col-sm-6 col-md-4 text-center">
                     <div class="facts-col">
                         <div class="section-heading color-reverse">
-                            <h2>3450</h2>
+                            <h2 class="counter">3450</h2>
                             <h3>Projects Complete</h3>
                         </div>
 
@@ -460,14 +482,14 @@
 
                 <div class="col-sm-6 col-md-4 text-center">
                     <div class="facts-col color-reverse">
-                        <h2>345+</h2>
+                        <h2 class="counter">345+</h2>
                         <h3>Happy Clients</h3>
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-md-4 text-center">
                     <div class="facts-col color-reverse">
-                        <h2>6000</h2>
+                        <h2 class="counter">6000</h2>
                         <h3>Working Hours</h3>
                     </div>
                 </div>
@@ -695,8 +717,17 @@
         </div>
     </section>
     <!--footer section end-->
+    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="js/jquery.sticky.js" type="text/javascript"></script>
+    <script src="js/jquery.stellar.js" type="text/javascript"></script>
+    <script src="js/jquery.flexslider.js" type="text/javascript"></script>
+    <script src="js/owl.carousel.js" type="text/javascript"></script>
+    <script src="js/jquery.waypoints.js" type="text/javascript"></script>
+<script src="js/jquery.counterup.js" type="text/javascript"></script>
+    <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
 </html>
